[gd_scene load_steps=20 format=2]

[ext_resource path="res://Art/White-Pixel.png" type="Texture" id=1]
[ext_resource path="res://Code/Enemy/enemy.gd" type="Script" id=2]
[ext_resource path="res://Code/Enemy/enemy_state_manager.gd" type="Script" id=3]
[ext_resource path="res://Code/Enemy/enemy_idle.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Code/Enemy/enemy_follow_core.gd" type="Script" id=6]
[ext_resource path="res://Code/Properties/entity_detect.gd" type="Script" id=7]
[ext_resource path="res://Code/Enemy/enemy_hurt_box.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=11]
radius = 32.04

[sub_resource type="CircleShape2D" id=4]
radius = 6.4

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 0.5, 0.5 )

[sub_resource type="Animation" id=5]
resource_name = "FollowCore"

[sub_resource type="Animation" id=6]
resource_name = "FollowPlayer"

[sub_resource type="Animation" id=7]
resource_name = "Idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "FollowCore"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Idle"

[sub_resource type="AnimationNodeStateMachine" id=2]
states/FollowCore/node = SubResource( 8 )
states/FollowCore/position = Vector2( 655, 112 )
states/Idle/node = SubResource( 10 )
states/Idle/position = Vector2( 870, 112 )
start_node = "Idle"
graph_offset = Vector2( -63, 30 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[node name="EnemyFollowCore" type="KinematicBody2D"]
scale = Vector2( 10, 10 )
collision_layer = 12
collision_mask = 8
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
maxHealth = 10

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 5

[node name="StateManager" type="Node" parent="."]
script = ExtResource( 3 )
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateManager"]
script = ExtResource( 4 )
animation_name = "Idle"
follow_core_node = NodePath("../FollowCore")
player_range = NodePath("../../AttackRange")
core_range = NodePath("../../CoreRange")

[node name="FollowCore" type="Node" parent="StateManager"]
script = ExtResource( 6 )
animation_name = "FollowCore"
follow_speed = 30.0
follow_acceleration = 300.0
player_range = NodePath("../../AttackRange")
core_range = NodePath("../../CoreRange")
idle_node = NodePath("../Idle")

[node name="CoreRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoreRange"]
self_modulate = Color( 0.101961, 1, 0, 1 )
shape = SubResource( 11 )

[node name="AttackRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 4 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16
script = ExtResource( 8 )
entity_stats = NodePath("../Stats")
type = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
scale = Vector2( 0.05, 0.05 )
shape = SubResource( 1 )

[node name="CoreHitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoreHitBox"]
shape = SubResource( 12 )

[node name="BuffTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FollowCore = SubResource( 5 )
anims/FollowPlayer = SubResource( 6 )
anims/Idle = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 2 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 0.05, 0.05 )
shape = SubResource( 1 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="CoreRange" to="CoreRange" method="_on_CoreRange_body_entered"]
[connection signal="body_exited" from="CoreRange" to="CoreRange" method="_on_CoreRange_body_exited"]
[connection signal="body_entered" from="AttackRange" to="AttackRange" method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="AttackRange" method="_on_AttackRange_body_exited"]
[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_HurtBox_area_entered"]
